--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".TestUserListActivity" />
         <activity android:name=".TestUpgradeActivity" />
         <activity android:name=".TestFactoryActivity" />
+        <activity android:name=".SensorActivity" />
         <activity android:name=".PortJoinActivity" />
         <activity android:name=".TestSceneActivity"></activity>
     </application>
